--- a/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="example_that_is_not_used.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
