--- a/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj
+++ b/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj
@@ -940,6 +940,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
