--- a/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj.filters
+++ b/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj.filters
@@ -41,5 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
