--- a/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="start.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="my_main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="start.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="my_main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
