--- a/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj
+++ b/mjz_Str0/StaticLib_mjz_str/StaticLib2.vcxproj
@@ -910,7 +910,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="mjzString.hpp" />
+    <ClInclude Include="mjzString.hpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DEBUGER|x64'">false</ExcludedFromBuild>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='DEBUGER|x64'">true</DeploymentContent>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
