--- a/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/mjz_Str0/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -15,13 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="example_that_is_not_used.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="start.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="my_main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lessons.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,5 +35,13 @@
     <ClInclude Include="my_main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mjz_macro_noformat_txt.tpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="example_1_15_2024.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
